--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,6 +4,7 @@ log4j.appender.out = org.apache.log4j.ConsoleAppender
 log4j.appender.out.layout = org.apache.log4j.PatternLayout
 log4j.appender.out.layout.ConversionPattern = %d (%t) [%p - %l] %m%n
 
-log4j.logger.org.riderzen.flume = WARN
-log4j.logger.org.riderzen.flume.sink = DEBUG
+log4j.logger.org.apache.flume = WARN
+log4j.logger.org.apache.flume.sink.mongo = DEBUG
+log4j.logger.com.mongodb = ERROR
 #flume.root.logger=INFO
