--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,6 +3,7 @@ log4j.rootLogger = INFO, out
 log4j.appender.out = org.apache.log4j.ConsoleAppender
 log4j.appender.out.layout = org.apache.log4j.PatternLayout
 log4j.appender.out.layout.ConversionPattern = %d (%t) [%p - %l] %m%n
+log4j.appender.FILE.encoding=UTF-8
 
 log4j.logger.org.apache.flume = WARN
 log4j.logger.org.apache.flume.sink.mongo = DEBUG
